# llm-from-scratch

./: .gitignore
ch1/: gptdatasetv1.py  main.py  pyrightconfig.json  tokenizerv1.py  tokenizerv2.py
ch2/: main.py
ch4/: Makefile  main.py  pyproject.toml
