[tool.poetry]
name = "crapgpt"
version = "0.1.0"
description = "crap from scratch gpt"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.8.0"
torch = "^2.4.0"
numpy = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
